feat: Complete architectural rewrite to production-ready Discord bot v0.0.1
## 🚀 Major Changes

This commit represents a complete architectural overhaul of the Discord bot, transforming it from a simple implementation into a production-ready, enterprise-grade application.

### 🏗️ Clean Architecture Implementation

**NEW STRUCTURE:**
- Core/: Business logic and domain models
  - Interfaces/: Service contracts and abstractions
  - Models/: Domain models and DTOs
  - Configuration/: Type-safe configuration with validation
  - Extensions/: Dependency injection setup
- Infrastructure/: External dependencies and implementations
  - Services/: Core service implementations
  - Health/: Health check monitoring
  - Logging/: Advanced logging infrastructure
- Application/: Application layer services
  - Handlers/: Command and interaction processing
  - Commands/: Command definitions
  - Validators/: Input validation logic
- Presentation/: Discord interface layer
  - Modules/: Enhanced slash command modules

### 🔧 Technical Improvements

**Configuration System:**
- Hierarchical configuration (JSON → User Secrets → Environment Variables → CLI args)
- Type-safe configuration classes with DataAnnotations validation
- Environment-specific settings (Development/Production/Staging)
- Secure secret management patterns

**Logging & Monitoring:**
- Serilog integration with structured logging
- Multiple sinks: Console (colored) + File (rolling) + Debug
- Configurable log levels per namespace
- Health checks for bot status, Discord connection, and memory usage
- Performance metrics and statistics tracking

**Resilience & Error Handling:**
- Polly integration for retry policies and circuit breakers
- Exponential backoff for transient failures
- Comprehensive error handling with user-friendly German messages
- Timeout handling and concurrency control (semaphore-based throttling)
- Graceful degradation patterns

### 🎮 Enhanced Bot Features

**Command System:**
- Grouped slash commands (/util

--- a/src/DiscordBot/DiscordBot.csproj
+++ b/src/DiscordBot/DiscordBot.csproj
@@ -1,18 +1,80 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <WarningsAsErrors />
+    <WarningsNotAsErrors>CS8618</WarningsNotAsErrors>
+    <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
+    <AssemblyVersion>0.0.1</AssemblyVersion>
+    <FileVersion>0.0.1</FileVersion>
+    <InformationalVersion>0.0.1</InformationalVersion>
+    <Product>Discord Bot</Product>
+    <Description>A robust Discord bot built with .NET 9</Description>
   </PropertyGroup>
 
   <ItemGroup>
+    <!-- Discord.Net packages -->
     <PackageReference Include="Discord.Net" Version="3.*" />
     <PackageReference Include="Discord.Net.Interactions" Version="3.*" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.*" />
+    
+    <!-- Microsoft Extensions -->
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.*" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.*" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.*" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.*" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="8.*" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="8.*" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="8.*" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.*" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.*" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.*" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.*" />
+    <PackageReference Include="Microsoft.Extensions.Options.DataAnnotations" Version="8.*" />
+    
+    <!-- Health Checks -->
+    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="8.*" />
+    
+    <!-- Logging -->
+    <PackageReference Include="Serilog" Version="4.*" />
+    <PackageReference Include="Serilog.Extensions.Hosting" Version="8.*" />
+    <PackageReference Include="Serilog.Settings.Configuration" Version="8.*" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="6.*" />
+    <PackageReference Include="Serilog.Sinks.File" Version="6.*" />
+    <PackageReference Include="Serilog.Formatting.Compact" Version="3.*" />
+    
+    <!-- Validation -->
+    <PackageReference Include="FluentValidation" Version="11.*" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.*" />
+    
+    <!-- Polly for resilience -->
+    <PackageReference Include="Polly" Version="8.*" />
+    <PackageReference Include="Polly.Extensions" Version="8.*" />
+    
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(Configuration)' == 'Debug'">
+    <!-- Test packages (only in Debug) -->
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.*" />
+    <PackageReference Include="xunit" Version="2.*" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.*" />
+    <PackageReference Include="Moq" Version="4.*" />
+    <PackageReference Include="FluentAssertions" Version="6.*" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="appsettings.Development.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="appsettings.Production.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
