--- a/src/DiscordBot/DiscordBot.csproj
+++ b/src/DiscordBot/DiscordBot.csproj
@@ -1,10 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <StartupObject>DiscordBot.Program</StartupObject>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <WarningsAsErrors />
     <WarningsNotAsErrors>CS8618</WarningsNotAsErrors>
@@ -14,6 +15,7 @@
     <InformationalVersion>0.0.1</InformationalVersion>
     <Product>Discord Bot</Product>
     <Description>A robust Discord bot built with .NET 9</Description>
+    <UserSecretsId>70410dd6-9794-42af-8ade-6f246089ba8d</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
